# streamline-control

./: .gitignore  .travis.yml  Cargo.toml  Makefile.toml  README.md  appveyor.yml  ci.bat  ci.sh  dmgset.py  mackage.sh  obswebsockettesting.py  remote_config.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  linux.yml  macos.yml  release.yml  windows.yml
frontend/: .eslintrc.js  .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.js  webpack.config.js  webpack.css_classes.config.js  webpack.js
frontend/js/: index.css_classes.js  index.js
frontend/scss/: index.scss  sidebar.scss  streamline-control.scss
frontend/src/: App.vue  lib.rs  main.rs  main.ts  main.tsx  router.ts  styles.less
frontend/src/components/: Sidebar.vue
frontend/src/page/: dash.rs  mod.rs
frontend/src/pages/: Dashboard.tsx  Login.tsx  Status.tsx
frontend/src/stores/: auth.ts
frontend/src/styles/: colors.scss  index.scss  reset.scss
migrations/: 1__initial.sql  V1__initial.sql  V1_initial.sql
remote_config_examples/: event.json  events.json
shared/: Cargo.toml
shared/src/: lib.rs
src/: build.rs  commands.rs  config.rs  dns.rs  gui.rs  main.rs  server.rs  update.rs
src/api/: auth.rs  mod.rs  obs.rs  scoring.rs  state.rs
src/api/types/: mod.rs
src/controllers/: mod.rs
src/controllers/obs_scenes/: messages.rs  mod.rs  stream.rs
src/interfaces/ftclive/: mod.rs
src/services/: mod.rs
src/services/ftclive/: connection.rs  messages.rs  mod.rs  stream.rs
src/services/obs/: messages.rs  mod.rs
static/: index.html  semantic.min.css
streamline/: Application.py  ConfigWindow.py  MainWindow.py  OBSWebsocket.py  __init__.py  __main__.py  config.json  menu.xml
templates/: index.rs.html
