[package]
name = "streamline-control"
version = "0.0.13"
authors = ["devyntk <bkeeneykid@me.com>"]
edition = "2018"
description = "An event management system for FIRST Tech Challenge Events"
license = "MIT"
repository = "https://github.com/devyntk/streamline-control/"

[workspace]
members = [
    "frontend",
    "shared"
]

[package.metadata.bundle]
name = "Streamline Control"
identifier = "com.github.streamline-control"

[profile.release.package.frontend]
opt-level = 'z'
codegen-units = 1

[features]
default = ["with-gui"]
with-gui = ["druid", "self_update"]

[dependencies]
shared = { path = "./shared" }

druid = { version = "0.7", optional = true }
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded", "time"] }
async-std = "1.9"
warp = "0.3"
sqlx = { version = "0.4.2", default-features = false, features = [ "runtime-tokio-native-tls", "macros" , "sqlite"] }
reqwest = { version = "0.11", features = [ "native-tls-vendored" ]}

refinery = { version = "0.5", features = ["rusqlite"] }
rust-embed="5.8"
mime_guess = "2"
self_update = { version = "0.23", optional = true}
webbrowser = "0.5.4"
port_scanner = "0.1"
app_dirs2 = "2"
flexi_logger = "0.17"
log = "0.4"
simple_logger = "1.6.0"
mime = "0.3.0"
clap = "3.0.0-beta.2"
ctrlc = "3.1.7"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]
