[package]
name = "frontend"
version = "0.1.0"
authors = ["devyntk <bkeeneykid@me.com>"]
edition = "2018"
description = "Front end web crate for Streamline-Control"
license = "MIT"
repository = "https://github.com/deyvntk/streamline-control/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
seed = { version = "0.9" }

shared = { path = "../shared" }


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
